header overflow bug fixed

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -6,6 +6,7 @@ header {
     position: absolute;
     left: 0;
     right: 0;
+    overflow-x: hidden;
 
     .links {
         display: flex;
